--- a/.htaccess
+++ b/.htaccess
@@ -10,4 +10,14 @@ ErrorDocument 404 https://www.loogart.com/404
 RewriteBase /
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 
+Header set Cache-Control "max-age=2628000, public"
 
+# One year for image files
+<filesMatch ".(jpg|jpeg|png|gif|ico)$">
+Header set Cache-Control "max-age=31536000, public"
+</filesMatch>
+
+# One month for css and js
+<filesMatch ".(css|js)$">
+Header set Cache-Control "max-age=2628000, public"
+</filesMatch>
