--- a/.htaccess
+++ b/.htaccess
@@ -21,3 +21,10 @@ Header set Cache-Control "max-age=31536000, public"
 <filesMatch ".(css|js)$">
 Header set Cache-Control "max-age=2628000, public"
 </filesMatch>
+
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteCond %{HTTPS} off [OR]
+RewriteCond %{HTTP_HOST} ^www\.loogart\.com [NC]
+RewriteRule (.*) https://loogart.com/$1 [L,R=301]
+</IfModule>
